ajuste no nome do teste do workflow

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,8 +4,8 @@ on: pull_request
 
 jobs:
   jest:
-    name: Jest Ubuntu
-    runs-un: ubuntu-latesd
+    name: Jest-Ubuntu
+    runs-on: ubuntu-latesd
     steps:
       - uses: actions/checkout@v4
 
