--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "concurrently": "^8.2.2",
+    "eslint": "^9.39.2",
+    "globals": "^17.2.0",
     "jest": "^29.6.2",
     "prettier": "^3.8.0"
   }
